# resticular

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  resticular.toml
.circleci/: config.yml
resticular-core/: Cargo.toml
resticular-html/: Cargo.toml
source/: index.html  some.md  styles.css
src/: main.rs
src/lib/: mod.rs
src/lib/cli/: mod.rs
src/lib/cli/commands/: mod.rs
src/lib/core/: minifier.rs  mod.rs
src/lib/core/components/: mod.rs
src/lib/core/config/: mod.rs
src/lib/core/data/: mod.rs
src/lib/core/fs/: mod.rs  reader.rs  watcher.rs
src/lib/core/html/: minify.rs  mod.rs
src/lib/core/http/: mod.rs  routes.rs
src/lib/core/http/ws/: mod.rs
src/lib/core/markdown/: mod.rs
src/lib/error/: mod.rs
src/lib/tests/: mod.rs
