[package]
description = "Blazingly Fast Static Site Generator"
readme = "README.md"
edition = "2021"
name = "resticular"
version = "0.1.0"
repository = "https://github.com/Haider-Ali-Dev/resticular"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.4"
hotwatch = "0.4.6"
lol_html = "0.3.1"
minify-html = "0.8.0"
mopa = "0.2.2"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.1"
scraper = "0.13.0"
serde = "1.0.137"
serde_derive = "1.0.137"
thiserror = "1.0.31"
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = "0.2.0"
ws = "0.9.2"
crossbeam-channel = "0.5.4"
clap = "3.1.18"
colored = "2.0.0"
fs_extra = "1.2.0"
minifier = "0.2.1"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.tower-http]
features = ["fs"]
version = "0.3.4"

[lib]
name = "resticular"
path = "src/lib/mod.rs"
