[package]
author = "Haider Ali"
description = "Blazingly Fast Static Site Generator"
readme = "README.md"
edition = "2021"
name = "resticular"
version = "0.1.10"
repository = "https://github.com/Haider-Ali-Dev/resticular"
license = "MIT OR Apache-2.0"
exclude = ["/examples", "resticular.toml", "/source", "/dist"]
[dependencies]
axum = "0.4"
hotwatch = "0.4.6"
lol_html = "0.3.1"
minify-html = "0.8.0"
mopa = "0.2.2"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.1"
scraper = "0.13.0"
serde = "1.0.137"
serde_derive = "1.0.137"
thiserror = "1.0.31"
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = "0.2.0"
ws = "0.9.2"
crossbeam-channel = "0.5.4"
clap = { version = "3.1", features = ["derive"] }
colored = "2.0.0"
fs_extra = "1.2.0"
minifier = "0.2.1"
run_script = "0.9.0"
indicatif = "0.16.2"
html2text = "0.4.2"
serde_json = "1.0.81"
regex = "1.5.6"
tera = "1.16.0"
soup = "0.5.1"
execute = "0.2.11"
cmd_lib = "1.3.0"
duct_sh = "0.13.5"
swc_common = { version = "0.23.0", features = ["tty-emitter"] }
swc = "0.205.0"
swc_ecma_minifier = "0.135.0"
parcel_css = "1.0.0-alpha.28"



[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.tower-http]
features = ["fs"]
version = "0.3.4"

[lib]
name = "resticular"
path = "src/lib/mod.rs"

[package.metadata.deb]
maintainer = "Haider Ali"
copyright = "2022, Haider Ali <rusthelpingnetwork@gmail.com>"
license-file = ["LICENSE-MIT"]
section = "web"
